# Device-Manager-for-BleBox

./: .env.example  .gitignore  LICENSE  README.md  eslint.config.mjs  package.json
.github/workflows/: ci.yml  release.yml
apps/companion/: package.json
apps/companion/src/: app.ts  discovery.ts  index.ts
apps/companion/src/routes/: discovery.ts  proxy.ts
apps/web/: index.html  package.json  tsconfig.node.json  vite.config.ts
apps/web/public/: site.webmanifest
apps/web/src/: env.ts  main.tsx
apps/web/src/components/: route-dialog.tsx
apps/web/src/i18n/: labels.ts
apps/web/src/lib/: blebox.ts  query.ts
apps/web/src/routes/: __root.tsx
apps/web/src/stores/: actions-draft.ts  (+1 more)
assets/branding/: README.md  blebox-1600-1600-max.xcf  generate-favicons.mjs  generate-macos-icons.mjs
docs/: action-shape.md  decisions.md
docs/samples/: actions-state.json  settings-state.json
js/: .env.example  .gitignore  .prettierignore  eslint.config.mjs  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
js/apps/web/: tsconfig.app.json  tsconfig.json
js/scripts/: codegen.mjs
js/src/: bindings.ts  main.tsx  routeTree.gen.ts
js/src/i18n/: i18next.d.ts  labels.ts
js/src/lib/: blebox.ts  companion.ts  monaco.ts  query.ts  settings.ts  utils.ts  wifi.ts
js/src/routes/: __root.tsx  index.tsx
js/src/shared/: index.ts  json-schema.ts
js/src/stores/: actions-draft.ts  devices.ts
rust/: Cargo.toml  tauri.conf.json
rust/icons/: icon.icns
rust/src/: commands.rs  config.rs  discovery.rs  error.rs  http.rs  keychain.rs  lib.rs  main.rs  net.rs
(+74 files in other folders)
