[package]
name = "blebox-device-manager"
version = "0.1.0"
description = "Device Manager for BleBox — Tauri desktop app"
authors = ["thomas kiljanczyk dev"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "blebox_device_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2" }
tauri-plugin-log = "2"
